--- a/charts/secrets-router/templates/deployment.yaml
+++ b/charts/secrets-router/templates/deployment.yaml
@@ -52,6 +52,10 @@ spec:
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         {{- if .Values.serviceAccount.annotations }}
         {{- if index .Values.serviceAccount.annotations "eks.amazonaws.com/role-arn" }}
         - name: AWS_ROLE_ARN
