refactor: update logic

--- a/charts/secrets-router/Chart.yaml
+++ b/charts/secrets-router/Chart.yaml
@@ -4,4 +4,9 @@ description: Secrets Router Service - Dapr-based secrets broker
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
+dependencies:
+  - name: dapr
+    version: "1.16.0"
+    repository: "https://dapr.github.io/helm-charts/"
+    condition: dapr.enabled
 
