--- a/charts/secrets-router/templates/service.yaml
+++ b/charts/secrets-router/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "secrets-router.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "secrets-router.labels" . | nindent 4 }}
 spec:
