--- a/charts/secrets-router/templates/serviceaccount.yaml
+++ b/charts/secrets-router/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "secrets-router.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "secrets-router.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
