--- a/charts/umbrella/Chart.yaml
+++ b/charts/umbrella/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: secrets-broker
-description: Umbrella chart for Secrets Broker (Dapr + Secrets Router)
+name: control-plane-umbrella
+description: Control Plane Umbrella Chart (Dapr + Secrets Router)
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
