--- a/charts/secrets-router/templates/secrets-components.yaml
+++ b/charts/secrets-router/templates/secrets-components.yaml
@@ -1,50 +1,56 @@
-{{- if .Values.secretStores.enabled }}
-{{- range $storeName, $storeConfig := .Values.secretStores.stores }}
+{{- /* 
+Always create the Kubernetes secret store component.
+It is the default fallback and available in the Release Namespace.
+*/ -}}
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: kubernetes
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "secrets-router.labels" . | nindent 4 }}
+    app.kubernetes.io/component: secret-store
+spec:
+  type: secretstores.kubernetes
+  version: v1
+  metadata:
+  - name: defaultNamespace
+    value: {{ .Release.Namespace | quote }}
+
+{{- /* 
+Conditionally create the AWS Secrets Manager component.
+*/ -}}
+{{- if .Values.secretStores.aws.enabled }}
 ---
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: {{ $storeName }}
-  namespace: {{ $.Release.Namespace }}
+  name: aws-secrets-manager
+  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "secrets-router.labels" $ | nindent 4 }}
+    {{- include "secrets-router.labels" . | nindent 4 }}
     app.kubernetes.io/component: secret-store
 spec:
-  type: {{ $storeConfig.type }}
+  type: secretstores.aws.secretsmanager
   version: v1
   metadata:
-  {{- if eq $storeConfig.type "secretstores.kubernetes" }}
-    {{- if $storeConfig.namespaces }}
-    {{- $namespaces := join "," $storeConfig.namespaces }}
-    - name: allowedNamespaces
-      value: {{ $namespaces | quote }}
-    {{- else }}
-    - name: allowedNamespaces
-      value: {{ $.Release.Namespace | quote }}
-    {{- end }}
-    - name: defaultSecretStore
-      value: {{ $storeConfig.defaultSecretStore | default "false" | quote }}
-  {{- else if eq $storeConfig.type "secretstores.aws.secretsmanager" }}
-    - name: region
-      value: {{ $storeConfig.region | default "us-east-1" | quote }}
-    {{- if $storeConfig.pathPrefix }}
-    - name: pathPrefix
-      value: {{ $storeConfig.pathPrefix | quote }}
-    {{- end }}
+  - name: region
+    value: {{ .Values.secretStores.aws.region | default "us-east-1" | quote }}
+  {{- if .Values.secretStores.aws.pathPrefix }}
+  - name: pathPrefix
+    value: {{ .Values.secretStores.aws.pathPrefix | quote }}
   {{- end }}
-  {{- if $storeConfig.auth }}
+  {{- if .Values.secretStores.aws.auth }}
   auth:
-    {{- if $storeConfig.auth.secretStore }}
-    secretStore: {{ $storeConfig.auth.secretStore }}
+    {{- if .Values.secretStores.aws.auth.secretStore }}
+    secretStore: {{ .Values.secretStores.aws.auth.secretStore }}
     {{- end }}
-    {{- if $storeConfig.auth.metadata }}
+    {{- if .Values.secretStores.aws.auth.metadata }}
     metadata:
-      {{- range $key, $value := $storeConfig.auth.metadata }}
+      {{- range $key, $value := .Values.secretStores.aws.auth.metadata }}
       - name: {{ $key }}
         value: {{ $value | quote }}
       {{- end }}
     {{- end }}
   {{- end }}
 {{- end }}
-{{- end }}
-
