--- a/charts/secrets-router/values.yaml
+++ b/charts/secrets-router/values.yaml
@@ -41,10 +41,6 @@ env:
   DEBUG_MODE: "false"
   LOG_LEVEL: "INFO"
   DAPR_HTTP_PORT: "3500"
-  # Secret store priority: comma-separated list of Dapr component names
-  # Secrets will be fetched from stores in order until found
-  # Default: kubernetes-secrets first, then aws-secrets-manager
-  SECRET_STORE_PRIORITY: "kubernetes-secrets,aws-secrets-manager"
   SERVER_PORT: "8080"
   # Service version
   SERVICE_VERSION: "v0.0.1"
@@ -100,37 +96,16 @@ ingress:
   enabled: false
 
 # Secret Stores Configuration
-# Configure Dapr secret store components that will be created
 secretStores:
-  enabled: true
-  stores:
-    # Kubernetes Secrets Store
-    # Supports secrets from multiple namespaces
-    kubernetes-secrets:
-      type: secretstores.kubernetes
-      defaultSecretStore: true
-      # List of namespaces where secrets can be accessed
-      # If not specified, defaults to Release.Namespace
-      namespaces:
-        # - production
-        # - staging
-        # - default
-    
-    # AWS Secrets Manager Store
-    aws-secrets-manager:
-      type: secretstores.aws.secretsmanager
-      defaultSecretStore: false
-      region: us-east-1
-      # Optional: Path prefix for all AWS secrets
-      # pathPrefix: "/app/secrets"
-      # Optional: Map of secret names to full AWS paths
-      # secretPaths:
-      #   database-credentials: "/app/secrets/production/database-credentials"
-      #   api-key: "/app/secrets/production/api-key"
-      auth:
-        secretStore: kubernetes
-        # Optional: Additional auth metadata
-        # metadata:
-        #   accessKey: "AWS_ACCESS_KEY_ID"
-        #   secretKey: "AWS_SECRET_ACCESS_KEY"
-
+  # Configuration for AWS Secrets Manager
+  aws:
+    enabled: true
+    region: us-east-1
+    # Optional: Path prefix for all AWS secrets
+    pathPrefix: ""
+    auth:
+      secretStore: kubernetes
+      # Optional: Additional auth metadata
+      metadata: {}
+      #   accessKey: "AWS_ACCESS_KEY_ID"
+      #   secretKey: "AWS_SECRET_ACCESS_KEY"
