--- a/charts/umbrella/Chart.yaml
+++ b/charts/umbrella/Chart.yaml
@@ -13,4 +13,8 @@ dependencies:
     version: "1.0.1"
     repository: "file://../secrets-router"
     condition: secrets-router.enabled
+  - name: sample-service
+    version: "1.0.0"
+    repository: "file://../sample-service"
+    condition: sample-service.enabled
 
