--- a/charts/secrets-router/templates/secrets-components.yaml
+++ b/charts/secrets-router/templates/secrets-components.yaml
@@ -36,21 +36,8 @@ spec:
   metadata:
   - name: region
     value: {{ .Values.secretStores.aws.region | default "us-east-1" | quote }}
-  {{- if .Values.secretStores.aws.pathPrefix }}
-  - name: pathPrefix
-    value: {{ .Values.secretStores.aws.pathPrefix | quote }}
-  {{- end }}
-  {{- if .Values.secretStores.aws.auth }}
-  auth:
-    {{- if .Values.secretStores.aws.auth.secretStore }}
-    secretStore: {{ .Values.secretStores.aws.auth.secretStore }}
-    {{- end }}
-    {{- if .Values.secretStores.aws.auth.metadata }}
-    metadata:
-      {{- range $key, $value := .Values.secretStores.aws.auth.metadata }}
-      - name: {{ $key }}
-        value: {{ $value | quote }}
-      {{- end }}
-    {{- end }}
+  {{- if .Values.secretStores.aws.multipleKeyValuesPerSecret }}
+  - name: multipleKeyValuesPerSecret
+    value: {{ .Values.secretStores.aws.multipleKeyValuesPerSecret | quote }}
   {{- end }}
 {{- end }}
