--- a/charts/sample-service/values.yaml
+++ b/charts/sample-service/values.yaml
@@ -1,6 +1,9 @@
 # Sample service configuration for testing secrets-router
 replicaCount: 3
 
+# Pod restart policy for sample services
+restartPolicy: Always
+
 # Service for the sample pods
 service:
   type: ClusterIP
