--- a/charts/sample-service/values.yaml
+++ b/charts/sample-service/values.yaml
@@ -1,8 +1,8 @@
 # Sample service configuration for testing secrets-router
 replicaCount: 3
 
-# Pod restart policy for sample services
-restartPolicy: Always
+# Pod restart policy for sample services (use Never for one-time tests)
+restartPolicy: Never
 
 # Service for the sample pods
 service:
