--- a/charts/secrets-router/templates/service.yaml
+++ b/charts/secrets-router/templates/service.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "secrets-router.fullname" . }}
+  name: secrets-router
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "secrets-router.labels" . | nindent 4 }}
+    app.kubernetes.io/name: secrets-router
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,5 +15,6 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "secrets-router.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/name: secrets-router
+    app.kubernetes.io/instance: {{ .Release.Name }}
 
