--- a/testing/2/override.yaml
+++ b/testing/2/override.yaml
@@ -1,30 +1,17 @@
-# Test 2: Cross-Namespace Failure Case
-# Minimal override file - ONLY values that differ from base chart defaults
-
-dapr:
-  enabled: false         # Disable Dapr - already installed cluster-wide
-
-secrets-router:
-  image:
-    pullPolicy: Never  # Override base "Always" for local images
-  secretStores:
-    aws:
-      enabled: false   # Override base "true" for K8s-only testing
-    stores:
-      kubernetes-secrets:
-        namespaces:
-          - test-namespace-2
-          - test-namespace-1  # Access secrets from Test 1 namespace
+# Test 2: Cross-Namespace Access Test
+# Note: This test requires additional manual work since templates now use .Release.Namespace
+# Python client in test-namespace-2 needs to access secrets-router in test-namespace-1
+#
+# To test cross-namespace access with current design:
+# 1. Deploy test-1 with secrets-router in test-namespace-1
+# 2. Deploy test-2 with sample-service in test-namespace-2  
+# 3. Manually patch the python client environment or use direct kubectl commands
 
 sample-service:
   clients:
     python:
-      env:
-        - name: SECRETS_ROUTER_URL
-          value: "http://test-1-secrets-router.test-namespace-1.svc.cluster.local:8080"  # Cross-namespace URL
-        - name: TEST_NAMESPACE
-          value: "test-namespace-1"     # Try to access Test 1 secrets
+      enabled: true     # Enable for testing
     node:
-      enabled: false    # Override base "true" to reduce test complexity
+      enabled: false    # Reduce test complexity
     bash:
-      enabled: false    # Override base "true" to reduce test complexity
+      enabled: false    # Reduce test complexity
